Increase footer padding

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <a href="">Salon</a>
   </div>
   <script type="text/javascript" src="libs/angular/angular.js"></script>
+  <script type="text/javascript" src="app/modules/app.js"></script>
+
 </body>
 
 </html>
