--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,108 @@
 <html lang="en" ng-app="salonApp">
 
 <head>
+  <!-- Meta Tags -->
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>salonApp</title>
-  <meta name="viewport" width="device-width" content="initial-scale=1" />
-  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic"> -->
-  <!-- <link href="assets/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" /> -->
+  <meta name="description" content="Insert Your Site Description" />
+  <!-- Mobile Specifics -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="HandheldFriendly" content="true" />
+  <meta name="MobileOptimized" content="320" />
+  <!-- Mobile Internet Explorer ClearType Technology -->
+  <!--[if IEMobile]>  <meta http-equiv="cleartype" content="on">  <![endif]-->
+  <!-- Bootstrap -->
+  <link href="assets/_include/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Main Style -->
   <link href="assets/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+<!--   <link rel="stylesheet" type="text/css" href="assets/css/materialize.css">
+ -->  <link href="assets/_include/css/main.css" rel="stylesheet">
+  <!-- Supersized -->
+  <link href="assets/_include/css/supersized.css" rel="stylesheet">
+  <link href="assets/_include/css/supersized.shutter.css" rel="stylesheet">
+  <!-- FancyBox -->
+  <link href="assets/_include/css/fancybox/jquery.fancybox.css" rel="stylesheet">
+  <!-- Font Icons -->
+  <link href="assets/_include/css/fonts.css" rel="stylesheet">
+  <!-- Shortcodes -->
+  <link href="assets/_include/css/shortcodes.css" rel="stylesheet">
+  <!-- Responsive -->
+  <link href="assets/_include/css/bootstrap-responsive.min.css" rel="stylesheet">
+  <link href="assets/_include/css/responsive.css" rel="stylesheet">
+  <!-- Supersized -->
+  <link href="assets/_include/css/supersized.css" rel="stylesheet">
+  <link href="assets/_include/css/supersized.shutter.css" rel="stylesheet">
+  <!-- Google Font -->
+  <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900' rel='stylesheet' type='text/css'>
+  <!-- Fav Icon -->
+  <link rel="shortcut icon" href="#">
+  <link rel="apple-touch-icon" href="#">
+  <link rel="apple-touch-icon" sizes="114x114" href="#">
+  <link rel="apple-touch-icon" sizes="72x72" href="#">
+  <link rel="apple-touch-icon" sizes="144x144" href="#">
+  <!-- Modernizr -->
+  <script src="assets/_include/js/modernizr.js"></script>
+  <!-- Analytics -->
+  <script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'Insert Your Code']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script');
+    ga.type = 'text/javascript';
+    ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(ga, s);
+  })();
+  </script>
+  <!-- End Analytics -->
 </head>
 
 <body>
-  <header class>
-    <a href="" class="logo">mySalon</a>
-  </header>
-  <div class="container"></div>
+  <div ng-include="'app/views/slider.view.html'" class="slider"></div>
+  <div ng-include="'app/views/header.view.html'"></div>
+  <div ng-view></div>
+  <div ng-include="'app/views/footer.view.html'"></div>
+  <!-- End Footer -->
+  <!-- Back To Top -->
+  <a id="back-to-top" href="#">
+    <i class="font-icon-arrow-simple-up"></i>
+  </a>
+  <!-- End Back to Top -->
+  <!-- Js -->
   <script type="text/javascript" src="libs/angular/angular.js"></script>
+  <script type="text/javascript" src="app/modules/app.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script type="text/javascript" src="libs/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="libs/angular-route/angular-route.min.js"></script>
+  <script type="text/javascript" src="libs/angular-loading-bar/build/loading-bar.min.js"></script>
+  <!--controllers -->
+  <script type="text/javascript" src="app/controllers/home.client.ctrl.js"></script>
+  <script type="text/javascript" src="app/controllers/signup.client.ctrl.js"></script>
+  <!-- jQuery Core -->
+  <script src="assets/_include/js/bootstrap.min.js"></script>
+  <!-- Bootstrap -->
+  <script src="assets/_include/js/supersized.3.2.7.min.js"></script>
+  <!-- Slider -->
+  <script src="assets/_include/js/waypoints.js"></script>
+  <!-- WayPoints -->
+  <script src="assets/_include/js/waypoints-sticky.js"></script>
+  <!-- Waypoints for Header -->
+  <script src="assets/_include/js/jquery.isotope.js"></script>
+  <!-- Isotope Filter -->
+  <script src="assets/_include/js/jquery.fancybox.pack.js"></script>
+  <!-- Fancybox -->
+  <script src="assets/_include/js/jquery.fancybox-media.js"></script>
+  <!-- Fancybox for Media -->
+  <script src="assets/_include/js/jquery.tweet.js"></script>
+  <!-- Tweet -->
+  <script src="assets/_include/js/plugins.js"></script>
+  <!-- Contains: jPreloader, jQuery Easing, jQuery ScrollTo, jQuery One Page Navi -->
+  <script src="assets/_include/js/main.js"></script>
+  <!-- Default JS -->
+  <!-- End Js -->
 </body>
 
 </html>
